[gd_scene load_steps=4 format=3 uid="uid://bo52h7lo4ebl"]

[ext_resource type="Script" path="res://Scenes/UI/UI.gd" id="1_pakoh"]
[ext_resource type="PackedScene" uid="uid://c4ayi2i5sdm4l" path="res://Scenes/UI/inventory_default.tscn" id="2_eb8lg"]
[ext_resource type="PackedScene" uid="uid://dhdt8lhl0xkyq" path="res://Scenes/Spells/spell_crafter.tscn" id="3_cryky"]

[node name="Main" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("1_pakoh")

[node name="GC" type="GridContainer" parent="UI"]
offset_right = 206.0
offset_bottom = 31.0
columns = 5

[node name="V1" type="VBoxContainer" parent="UI/GC"]
layout_mode = 2
size_flags_horizontal = 2

[node name="Button" type="Button" parent="UI/GC/V1"]
layout_mode = 2
text = "Materials"

[node name="MaterialInventory" parent="UI/GC/V1" instance=ExtResource("2_eb8lg")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="V2" type="VBoxContainer" parent="UI/GC"]
layout_mode = 2

[node name="Button2" type="Button" parent="UI/GC/V2"]
layout_mode = 2
text = "Runes"

[node name="RuneInventory" parent="UI/GC/V2" instance=ExtResource("2_eb8lg")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="V3" type="VBoxContainer" parent="UI/GC"]
layout_mode = 2

[node name="Button4" type="Button" parent="UI/GC/V3"]
layout_mode = 2
text = "Spell Crafting"

[node name="SpellCrafter" parent="UI/GC/V3" instance=ExtResource("3_cryky")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="pressed" from="UI/GC/V1/Button" to="UI" method="_on_button_pressed"]
[connection signal="pressed" from="UI/GC/V2/Button2" to="UI" method="_on_button_2_pressed"]
[connection signal="pressed" from="UI/GC/V3/Button4" to="UI" method="_on_button_4_pressed"]
